Fixed Text Area alignment in login screen

--- a/public/style.css
+++ b/public/style.css
@@ -335,7 +335,7 @@ a
 {
 	float : right;
 	text-align : left;
-	width : 230px;
+	width : 180px;
 	margin-left : 10px;
 	margin-right : 30px;
 }
